Updated signonfixed.htmland styles.css

--- a/naka8177FunkyTown/assets:/css:/styles.css
+++ b/naka8177FunkyTown/assets:/css:/styles.css
@@ -3,10 +3,14 @@ html {
   font-family: sans-serif;
 }
 body.fixed {
-  width: 700px;
+  width: 700px; 
+  margin: auto;
 }
 header {
   background-color: lightskyblue;
+}
+h1 {
+  color: lightblue;
 }
 #submitBtn {
   color: white;
