--- a/naka8177FunkyTown/assets/css/styles.css
+++ b/naka8177FunkyTown/assets/css/styles.css
@@ -2,10 +2,11 @@ html {
   font-size: 16px;
   font-family: sans-serif;
 }
-body.fixed {
+body.fixed{
   max-width: 700px;
   margin: auto;
 }
+
 header {
   height: 60px;
   width: 700px;
@@ -18,14 +19,16 @@ h1 {
   padding-top: 18px;
   color:white;
 }
-div {
-  padding-top: 20px; 
+div.fixed {
   width: 700px;
 }
 #form {
   padding-top: 10px;
   width: 450px;
   float: left;
+}
+#form p {
+  width: 70%;
 }
 #related {
   padding-top: 10px;
@@ -45,3 +48,4 @@ div {
 a {
   font-size: 12px;
 }
+
