--- a/naka8177JSClock_2/assets/css/styles.css
+++ b/naka8177JSClock_2/assets/css/styles.css
@@ -9,7 +9,7 @@ header {
   font-size: 18px;
   padding: 10px 0;
 }
-#clock {
+#clockStyle {
   float: right;
   margin-right: 20px;
   padding-top: 4px;
